finish order app, payment function added

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,6 @@
 
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
-
 <script type="{% static 'text/javascript' %}">
 /// some script
 
@@ -38,6 +37,9 @@ $(document).ready(function() {
 }); 
 // jquery end
 </script>
+
+<!-- scripts for paypal -->
+<script src="https://www.paypal.com/sdk/js?client-id=AQN1qpdruEmV7QNi8F13K46HbjNrFvbk3bHOZkBJIdKEza6WAkVRUW3nZxT-ZZlWvubI_vdMIupJ2CvV&currency=USD"></script>
 
 </head>
 <body>
