--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -31,6 +31,11 @@
 
 
 							<hr>
+
+							<div class="row">
+								<h6>Stock: </h6> &nbsp; {{single_product.stock}}
+							</div>
+							<hr>
 							<div class="row">
 								<div class="item-option-select">
 									<h6>Choose Color</h6>
