--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -144,6 +144,15 @@
                             <span class="price">{{ product.price }}</span>
                             <!-- <del class="price-old">$1980</del> -->
                         </div> <!-- price-wrap.// -->
+                        <div class="rating-star">
+                            <span>
+                                <i class="fa fa-star{% if product.averageRating < 0.5 %}-o{% elif single_product.averageRating >= 0.5 and single_product.averageRating < 1 %}-half-o {% endif %}" aria-hidden="true"></i>
+                                <i class="fa fa-star{% if product.averageRating < 1.5 %}-o{% elif single_product.averageRating >= 1.5 and single_product.averageRating < 2 %}-half-o {% endif %}" aria-hidden="true"></i>
+                                <i class="fa fa-star{% if product.averageRating < 2.5 %}-o{% elif single_product.averageRating >= 2.5 and single_product.averageRating < 3 %}-half-o {% endif %}" aria-hidden="true"></i>
+                                <i class="fa fa-star{% if product.averageRating < 3.5 %}-o{% elif single_product.averageRating >= 3.5 and single_product.averageRating < 4 %}-half-o {% endif %}" aria-hidden="true"></i>
+                                <i class="fa fa-star{% if product.averageRating < 4.5 %}-o{% elif single_product.averageRating >= 4.5 and single_product.averageRating < 5 %}-half-o {% endif %}" aria-hidden="true"></i>
+                            </span>
+                        </div>
                     </div>
                     <a href="{{ product.get_url }}" class="btn btn-block btn-primary">View Details</a>
                 </figcaption>
